# bincode

./: Cargo.toml
sgx/bincode-sgx-test/enclave/: Cargo.toml
