[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
bincode = { path = "../../.." }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
#serde_bytes = { git = "https://github.com/mesalock-linux/serde-bytes-sgx".git }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx.git" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tunittest = {rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
